--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -21,6 +21,18 @@ const jobsCount = jobs.length;
     <meta property="og:description" content={pageDescription} />
   </Fragment>
 
+  <!-- ヘッダーセクション -->
+  <div class="bg-emerald-900 px-6 py-24 sm:py-32 lg:px-8">
+    <div class="mx-auto max-w-2xl text-center">
+      <h2 class="text-5xl font-semibold tracking-tight text-white sm:text-5xl">
+        求人一覧
+      </h2>
+      <p class="mt-8 text-md font-medium text-pretty text-white sm:text-xl/8">
+        こちらに厳選した求人掲載しています。推薦書を作成し紹介していますのでLINEもしくはお電話にてお問い合わせください。
+      </p>
+    </div>
+  </div>
+
   <Breadcrumb pageName={pageTitle} />
 
   <!-- 求人一覧 -->
