--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -19,8 +19,9 @@ export async function POST({ request }: { request: Request }) {
       firstName: formData.get('first-name'),
       phone: formData.get('phone'),
       email: formData.get('email'),
-      license: formData.get('license'),
-      postalCode: formData.get('postal-code'),
+      license: formData.get('license')?.toString().normalize('NFKC'),
+      postNumber: formData.get('post_number'),
+      age: formData.get('age'),
     };
 
     // Send to webhook
@@ -155,105 +156,137 @@ export async function POST({ request }: { request: Request }) {
       </p>
       <div class="mt-16 flex flex-col gap-16 sm:gap-y-20 lg:flex-row">
         <form id="contactForm" class="lg:flex-auto">
-          <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+          <div class="grid grid-cols-1 gap-x-8 gap-y-6">
+            <div class="grid grid-cols-2 gap-x-8 gap-y-6">
+              <div>
+                <label
+                  for="last-name"
+                  class="block text-sm/6 font-semibold text-gray-900"
+                  >姓 <span class="text-red-500">*</span></label
+                >
+                <div class="mt-2.5">
+                  <input
+                    type="text"
+                    name="last-name"
+                    id="last-name"
+                    required
+                    class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
+                  />
+                </div>
+              </div>
+              <div>
+                <label
+                  for="first-name"
+                  class="block text-sm/6 font-semibold text-gray-900"
+                  >名 <span class="text-red-500">*</span></label
+                >
+                <div class="mt-2.5">
+                  <input
+                    type="text"
+                    name="first-name"
+                    id="first-name"
+                    required
+                    class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="grid grid-cols-2 gap-x-8 gap-y-6">
+              <div>
+                <label
+                  for="phone"
+                  class="block text-sm/6 font-semibold text-gray-900"
+                  >電話番号 <span class="text-red-500">*</span></label
+                >
+                <div class="mt-2.5">
+                  <input
+                    type="tel"
+                    name="phone"
+                    id="phone"
+                    required
+                    pattern="^(0[5-9]0[-(]?[0-9]{4}[-)]?[0-9]{4}|0120[-]?\d{1,3}[-]?\d{4}|050[-]?\d{4}[-]?\d{4}|0\d{1,3}[-]?\d{1,4}[-]?\d{4}|0570[-]?\d{1,4}[-]?\d{4})$"
+                    placeholder="09012345678"
+                    class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
+                  />
+                </div>
+              </div>
+              <div>
+                <label
+                  for="email"
+                  class="block text-sm/6 font-semibold text-gray-900"
+                  >メールアドレス</label
+                >
+                <div class="mt-2.5">
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="example@example.com"
+                    class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
+                  />
+                </div>
+              </div>
+            </div>
             <div>
               <label
-                for="last-name"
+                for="post_number"
                 class="block text-sm/6 font-semibold text-gray-900"
-                >姓 <span class="text-red-500">*</span></label
+                >郵便番号 <span class="text-red-500">*</span></label
               >
               <div class="mt-2.5">
                 <input
                   type="text"
-                  name="last-name"
-                  id="last-name"
+                  name="post_number"
+                  id="post_number"
                   required
+                  pattern="[0-9]{7}"
+                  placeholder="1100015"
                   class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
                 />
               </div>
             </div>
             <div>
               <label
-                for="first-name"
+                for="age"
                 class="block text-sm/6 font-semibold text-gray-900"
-                >名 <span class="text-red-500">*</span></label
-              >
-              <div class="mt-2.5">
-                <input
-                  type="text"
-                  name="first-name"
-                  id="first-name"
-                  required
-                  class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
-                />
-              </div>
-            </div>
-            <div>
-              <label
-                for="phone"
-                class="block text-sm/6 font-semibold text-gray-900"
-                >電話番号 <span class="text-red-500">*</span></label
-              >
-              <div class="mt-2.5">
-                <input
-                  type="tel"
-                  name="phone"
-                  id="phone"
-                  required
-                  pattern="[0-9\-]*"
-                  placeholder="09012345678"
-                  class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
-                />
-              </div>
-            </div>
-            <div>
-              <label
-                for="email"
-                class="block text-sm/6 font-semibold text-gray-900"
-                >メールアドレス</label
-              >
-              <div class="mt-2.5">
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
-                />
-              </div>
-            </div>
-            <div class="sm:col-span-2">
-              <label
-                for="license"
-                class="block text-sm/6 font-semibold text-gray-900"
-                >保有している免許</label
+                >年代 <span class="text-red-500">*</span></label
               >
               <div class="mt-2.5">
                 <select
-                  id="license"
-                  name="license"
+                  id="age"
+                  name="age"
+                  required
                   class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
                 >
                   <option value="">選択してください</option>
-                  <option value="regular">普通免許</option>
-                  <option value="type2">二種免許</option>
-                  <option value="none">免許は持っていない</option>
+                  <option value="10代">10代</option>
+                  <option value="20代">20代</option>
+                  <option value="30代">30代</option>
+                  <option value="40代">40代</option>
+                  <option value="50代">50代</option>
+                  <option value="60代">60代</option>
+                  <option value="70代">70代</option>
                 </select>
               </div>
             </div>
             <div>
               <label
-                for="postal-code"
+                for="license"
                 class="block text-sm/6 font-semibold text-gray-900"
-                >郵便番号</label
+                >保有している免許 <span class="text-red-500">*</span></label
               >
               <div class="mt-2.5">
-                <input
-                  type="text"
-                  name="postal-code"
-                  id="postal-code"
-                  placeholder="123-4567"
-                  class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
-                />
+                <select
+                  id="license"
+                  name="license"
+                  required
+                  class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"
+                >
+                  <option value="">選択してください</option>
+                  <option value="普通免許">普通免許</option>
+                  <option value="二種免許">二種免許</option>
+                  <option value="免許は持っていない">免許は持っていない</option>
+                </select>
               </div>
             </div>
           </div>
@@ -261,7 +294,7 @@ export async function POST({ request }: { request: Request }) {
             <button
               type="submit"
               class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-              >送信する</button
+              >この内容で送信する</button
             >
           </div>
           <p class="mt-4 text-sm/6 text-gray-500">
@@ -318,8 +351,9 @@ export async function POST({ request }: { request: Request }) {
         firstName: formData.get('first-name'),
         phone: formData.get('phone'),
         email: formData.get('email'),
-        license: formData.get('license'),
-        postalCode: formData.get('postal-code'),
+        license: formData.get('license')?.toString().normalize('NFKC'),
+        postNumber: formData.get('post_number'),
+        age: formData.get('age'),
       };
 
       console.log('Sending form data:', data);
