--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -22,14 +22,44 @@ const jobsCount = jobs.length;
   </Fragment>
 
   <!-- ヘッダーセクション -->
-  <div class="bg-emerald-900 px-6 py-24 sm:py-32 lg:px-8">
-    <div class="mx-auto max-w-2xl text-center">
-      <h2 class="text-5xl font-semibold tracking-tight text-white sm:text-5xl">
-        求人一覧
-      </h2>
-      <p class="mt-8 text-md font-medium text-pretty text-white sm:text-xl/8">
-        こちらに厳選した求人掲載しています。推薦書を作成し紹介していますのでLINEもしくはお電話にてお問い合わせください。
-      </p>
+  <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
+    <img
+      src="/images/background3.jpg"
+      alt="タクシーが走る背景画像"
+      class="absolute inset-0 -z-10 size-full object-cover"
+    />
+    <div class="absolute inset-0 -z-10 bg-white/20 backdrop-blur-sm"></div>
+    <div
+      class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl"
+      aria-hidden="true"
+    >
+      <div
+        class="aspect-1097/845 w-274.25 bg-linear-to-tr from-[#ff4694] to-[#776fff] opacity-20"
+        style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+      >
+      </div>
+    </div>
+    <div
+      class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu"
+      aria-hidden="true"
+    >
+      <div
+        class="aspect-1097/845 w-274.25 bg-linear-to-tr from-[#ff4694] to-[#776fff] opacity-20"
+        style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+      >
+      </div>
+    </div>
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-2xl lg:mx-0">
+        <h2
+          class="text-5xl font-semibold tracking-tight text-white sm:text-7xl"
+        >
+          求人一覧
+        </h2>
+        <p class="mt-8 text-lg font-medium text-pretty text-white sm:text-xl/8">
+          こちらに厳選した求人掲載しています。推薦書を作成し紹介していますのでLINEもしくはお電話にてお問い合わせください。
+        </p>
+      </div>
     </div>
   </div>
 
@@ -49,36 +79,37 @@ const jobsCount = jobs.length;
             const detailUrl = `/jobs/${slug}/`;
 
             return (
-              <a href={detailUrl} class="group">
+              <a
+                href={`/jobs/${job.id}`}
+                class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pt-80 pb-8 sm:pt-48 lg:pt-80"
+              >
                 <img
                   src="/images/banner-square.png"
-                  alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                  class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8"
+                  alt={`${job.company}の求人画像`}
+                  class="absolute inset-0 -z-10 size-full object-cover"
                 />
-                <p class="mt-3 text-xs font-medium flex items-center gap- text-gray-700">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    class="size-4 text-gray-700 mr-0.5"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                  {job.headOffice}
-                </p>
-                <h3 class="text-lg font-semibold text-gray-900">
-                  {job.company}
-                </h3>
-                <div class="mt-1 flex flex-wrap gap-1">
-                  {job.dispatchApps.map((app: string) => (
-                    <span class="inline-block text-xs rounded-full bg-gray-50 px-2 py-1 font-medium text-gray-600 hover:bg-gray-100">
-                      {app}
-                    </span>
-                  ))}
+                <div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40" />
+                <div class="absolute inset-0 -z-10 rounded-2xl ring-1 ring-gray-900/10 ring-inset" />
+
+                <div class="flex flex-wrap items-center gap-y-1 overflow-hidden text-sm/6 text-gray-300">
+                  <span class="inline-block text-xs rounded-full bg-gray-50 px-2 py-1 font-medium text-gray-600 mr-2">
+                    {job.status}
+                  </span>
+                  {job.dispatchApps && job.dispatchApps.length > 0 && (
+                    <div class="flex items-center gap-x-2">
+                      <span class="text-gray-300 whitespace-nowrap">
+                        配車アプリ：
+                      </span>
+                      <div class="flex flex-wrap gap-1">
+                        {job.dispatchApps.map((app: string) => (
+                          <span class="inline-block text-xs rounded-full bg-gray-50 px-2 py-1 font-medium text-gray-600">
+                            {app}
+                          </span>
+                        ))}
+                      </div>
+                    </div>
+                  )}
+                  <span class="mr-8">{job.location}</span>
                 </div>
               </a>
             );
