--- a/src/pages/jobs/[slug].astro
+++ b/src/pages/jobs/[slug].astro
@@ -1,23 +1,23 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import { getJobsFromNotion } from '../../lib/notion.js';
+import { getJobsFromNotion, getJobByIdFromNotion } from '../../lib/notion.js';
 
 export async function getStaticPaths() {
   const jobs = await getJobsFromNotion();
 
-  return jobs.map((job, index) => {
+  return jobs.map((job) => {
     return {
       params: { slug: job.id },
-      props: { job },
     };
   });
 }
 
-const { job } = Astro.props;
+const { slug } = Astro.params;
+const job = await getJobByIdFromNotion(slug);
 
 const pageTitle = `${job.title}｜タクシーメイト`;
 const pageDescription = `${job.title}の求人情報です。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。`;
-const pageUrl = `https://taxi-mate.jp/jobs/${Astro.params.slug}/`;
+const pageUrl = `https://taxi-mate.jp/jobs/${slug}/`;
 ---
 
 <BaseLayout title={pageTitle} description={pageDescription} url={pageUrl}>
@@ -72,7 +72,7 @@ const pageUrl = `https://taxi-mate.jp/jobs/${Astro.params.slug}/`;
       class="mx-auto max-w-2xl px-4 pt-16 pb-24 sm:px-6 lg:max-w-7xl lg:px-8"
     >
       <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
-        {job.title}
+        {job.company}
       </h1>
       <div
         class="mt-12 lg:grid lg:grid-cols-12 lg:items-start lg:gap-x-12 xl:gap-x-16"
@@ -84,7 +84,7 @@ const pageUrl = `https://taxi-mate.jp/jobs/${Astro.params.slug}/`;
             <div>
               <div class="px-4 sm:px-0">
                 <h3 class="text-base/7 font-semibold text-gray-900">
-                  {job}
+                  {job.company}
                 </h3>
                 <p class="mt-1 max-w-2xl text-sm/6 text-gray-500">
                   {job.location}
@@ -99,7 +99,7 @@ const pageUrl = `https://taxi-mate.jp/jobs/${Astro.params.slug}/`;
                     <dd
                       class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
                     >
-                      {job.company}
+                      {job.headOffice}
                     </dd>
                   </div>
                   <div
@@ -139,93 +139,83 @@ const pageUrl = `https://taxi-mate.jp/jobs/${Astro.params.slug}/`;
                   <div
                     class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
                   >
-                    <dt class="text-sm/6 font-medium text-gray-900">About</dt>
+                    <dt class="text-sm/6 font-medium text-gray-900">特徴</dt>
                     <dd
                       class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
                     >
-                      Fugiat ipsum ipsum deserunt culpa aute sint do nostrud
-                      anim incididunt cillum culpa consequat. Excepteur qui
-                      ipsum aliquip consequat sint. Sit id mollit nulla mollit
-                      nostrud in ea officia proident. Irure nostrud pariatur
-                      mollit ad adipisicing reprehenderit deserunt qui eu.
+                      {job.features}
                     </dd>
                   </div>
                   <div
                     class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
                   >
                     <dt class="text-sm/6 font-medium text-gray-900">
-                      Attachments
+                      出庫時間
                     </dt>
                     <dd
-                      class="mt-2 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
+                      class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
                     >
-                      <ul
-                        role="list"
-                        class="divide-y divide-gray-100 rounded-md border border-gray-200"
-                      >
-                        <li
-                          class="flex items-center justify-between py-4 pr-5 pl-4 text-sm/6"
-                        >
-                          <div class="flex w-0 flex-1 items-center">
-                            <svg
-                              class="size-5 shrink-0 text-gray-400"
-                              viewBox="0 0 20 20"
-                              fill="currentColor"
-                              aria-hidden="true"
-                              data-slot="icon"
-                            >
-                              <path
-                                fill-rule="evenodd"
-                                d="M15.621 4.379a3 3 0 0 0-4.242 0l-7 7a3 3 0 0 0 4.241 4.243h.001l.497-.5a.75.75 0 0 1 1.064 1.057l-.498.501-.002.002a4.5 4.5 0 0 1-6.364-6.364l7-7a4.5 4.5 0 0 1 6.368 6.36l-3.455 3.553A2.625 2.625 0 1 1 9.52 9.52l3.45-3.451a.75.75 0 1 1 1.061 1.06l-3.45 3.451a1.125 1.125 0 0 0 1.587 1.595l3.454-3.553a3 3 0 0 0 0-4.242Z"
-                                clip-rule="evenodd"></path>
-                            </svg>
-                            <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                              <span class="truncate font-medium"
-                                >resume_back_end_developer.pdf</span
-                              >
-                              <span class="shrink-0 text-gray-400">2.4mb</span>
-                            </div>
-                          </div>
-                          <div class="ml-4 shrink-0">
-                            <a
-                              href="#"
-                              class="font-medium text-indigo-600 hover:text-indigo-500"
-                              >Download</a
-                            >
-                          </div>
-                        </li>
-                        <li
-                          class="flex items-center justify-between py-4 pr-5 pl-4 text-sm/6"
-                        >
-                          <div class="flex w-0 flex-1 items-center">
-                            <svg
-                              class="size-5 shrink-0 text-gray-400"
-                              viewBox="0 0 20 20"
-                              fill="currentColor"
-                              aria-hidden="true"
-                              data-slot="icon"
-                            >
-                              <path
-                                fill-rule="evenodd"
-                                d="M15.621 4.379a3 3 0 0 0-4.242 0l-7 7a3 3 0 0 0 4.241 4.243h.001l.497-.5a.75.75 0 0 1 1.064 1.057l-.498.501-.002.002a4.5 4.5 0 0 1-6.364-6.364l7-7a4.5 4.5 0 0 1 6.368 6.36l-3.455 3.553A2.625 2.625 0 1 1 9.52 9.52l3.45-3.451a.75.75 0 1 1 1.061 1.06l-3.45 3.451a1.125 1.125 0 0 0 1.587 1.595l3.454-3.553a3 3 0 0 0 0-4.242Z"
-                                clip-rule="evenodd"></path>
-                            </svg>
-                            <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                              <span class="truncate font-medium"
-                                >coverletter_back_end_developer.pdf</span
-                              >
-                              <span class="shrink-0 text-gray-400">4.5mb</span>
-                            </div>
-                          </div>
-                          <div class="ml-4 shrink-0">
-                            <a
-                              href="#"
-                              class="font-medium text-indigo-600 hover:text-indigo-500"
-                              >Download</a
-                            >
-                          </div>
-                        </li>
-                      </ul>
+                      {job.departureTime}
+                    </dd>
+                  </div>
+                  <div
+                    class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
+                  >
+                    <dt class="text-sm/6 font-medium text-gray-900">
+                      研修期間について
+                    </dt>
+                    <dd
+                      class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
+                    >
+                      {job.trainingPeriod}
+                    </dd>
+                  </div>
+                  <div
+                    class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
+                  >
+                    <dt class="text-sm/6 font-medium text-gray-900">
+                      隔勤の実働時間
+                    </dt>
+                    <dd
+                      class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
+                    >
+                      {job.workingHours}
+                    </dd>
+                  </div>
+                  <div
+                    class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
+                  >
+                    <dt class="text-sm/6 font-medium text-gray-900">
+                      通勤手段
+                    </dt>
+                    <dd
+                      class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
+                    >
+                      {job.commuteMethods}
+                    </dd>
+                  </div>
+                  <div
+                    class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
+                  >
+                    <dt class="text-sm/6 font-medium text-gray-900">
+                      通勤手段
+                    </dt>
+                    <dd
+                      class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
+                    >
+                      {job.commuteMethods}
+                    </dd>
+                  </div>
+                  <div
+                    class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0"
+                  >
+                    <dt class="text-sm/6 font-medium text-gray-900">
+                      給与保証について
+                    </dt>
+                    <dd
+                      class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"
+                    >
+                      {job.salaryGuarantee}
                     </dd>
                   </div>
                 </dl>
