画像のリンクが切れていたので適切なフォルダに配置

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
     <div class="flex lg:flex-1">
       <a href="/" class="-m-1.5 p-1.5">
         <span class="sr-only">タクシーメイト</span>
-        <img class="h-12 w-auto" src="/logo.png" alt="タクシーメイト" />
+        <img class="h-12 w-auto" src="/images/logo.png" alt="タクシーメイト" />
       </a>
     </div>
 
@@ -112,7 +112,7 @@
       <div class="flex items-center justify-between">
         <a href="/" class="-m-1.5 p-1.5">
           <span class="sr-only">タクシーメイト</span>
-          <img class="h-8 w-auto" src="/logo.png" alt="タクシーメイト" />
+          <img class="h-8 w-auto" src="/images/logo.png" alt="タクシーメイト" />
         </a>
         <button
           type="button"
