--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -49,7 +49,7 @@ const {
     <link rel="preconnect dns-prefetch" href="//connect.facebook.net" />
 
     <!-- favicon関連 -->
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
 
     <!-- 下記は各ページから固有のhead要素を受け取るためのタグ -->
     <slot name="head" />
