プライバシーポリシーのリンクをFooterに追加

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -108,6 +108,11 @@
               </svg>
             </a>
           </li>
+          <li>
+            <a href="/privacy/" class="text-gray-300 hover:text-white text-sm"
+              >プライバシーポリシー</a
+            >
+          </li>
         </ul>
       </div>
 
