スマホでフォームを1列にした

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -157,7 +157,7 @@ export async function POST({ request }: { request: Request }) {
       <div class="mt-16 flex flex-col gap-16 sm:gap-y-20 lg:flex-row">
         <form id="contactForm" class="lg:flex-auto">
           <div class="grid grid-cols-1 gap-x-8 gap-y-6">
-            <div class="grid grid-cols-2 gap-x-8 gap-y-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-6">
               <div>
                 <label
                   for="last-name"
@@ -191,7 +191,7 @@ export async function POST({ request }: { request: Request }) {
                 </div>
               </div>
             </div>
-            <div class="grid grid-cols-2 gap-x-8 gap-y-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-6">
               <div>
                 <label
                   for="phone"
