--- a/src/pages/jobs/[slug].astro
+++ b/src/pages/jobs/[slug].astro
@@ -224,7 +224,7 @@ const pageUrl = `https://taxi-mate.jp/jobs/${slug}/`;
 
           <form id="jobContactForm" class="mt-6">
             <div class="grid grid-cols-1 gap-x-8 gap-y-6">
-              <div class="grid grid-cols-2 gap-x-8 gap-y-6">
+              <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-6">
                 <div>
                   <label
                     for="last-name"
